fixing study alignments

--- a/web/src/components/studies/Studies.module.css
+++ b/web/src/components/studies/Studies.module.css
@@ -22,7 +22,7 @@
 
 .create-study-section {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-bottom: 1rem;
   margin-top: 2rem;
